--- a/zh-CN/700.reference/1200.database-proxy/500.logical-connection/200.displays-the-status-of-a-session.md
+++ b/zh-CN/700.reference/1200.database-proxy/500.logical-connection/200.displays-the-status-of-a-session.md
@@ -30,11 +30,11 @@
 
     * 指定 `id` 时， 支持模糊查询指定属性名称的 value ( ODP 1.1.0 版本起开始支持)。
 
-    * `id` 既可以是 `cs_id`，也可以是 `CONNECTION_ID`，显示结果相同。
+    * `id` 既可以是 `cs_id`，也可以是 `connection_id` ，显示结果相同。
 
-      `cs_id` 为 ODP 内部标记的每个 Client 的 `id` 号，`CONNECTION_ID` 为整个 OceanBase 数据库标记的每个 Client 的 `id` 号。
+      `cs_id` 为 ODP 内部标记的每个 Client 的 `id` 号，`connection_id`  为整个 OceanBase 数据库标记的每个 Client 的 `id` 号。
 
-      MySQL 模式下的 `CONNECTION_ID` 通过 `SELECT CONNECTION_ID();` 语句获取，Oracle 模式下的 `CONNECTION_ID` 通过 `SHOW FULL PROCESSLIST;` 语句获取。
+      MySQL 模式下的 `connection_id`  通过 `SELECT CONNECTION_ID();` 语句获取，Oracle 模式下的 `connection_id`  通过 `SHOW FULL PROCESSLIST;` 语句获取。
 
     * `LIKE` 模糊匹配，支持 '%' 和 '_' 。
 
@@ -43,151 +43,167 @@
     :::tab
     tab MySQL 模式
 
-    ```shell
-    obclient [(none)]> SHOW PROXYSESSION;
-    +----------------------+-------+----------+----------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
-    | proxy_sessid         | Id    | Cluster  | Tenant   | User | Host                 | db   | trans_count | svr_session_count | state             | tid   | pid   | using_ssl |
-    +----------------------+-------+----------+----------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
-    | 12402504630519660562 | 65160 | test420  | mysql001 | root | 100.xx.xx.xx:48056   | NULL |           0 |                 1 | MCS_ACTIVE_READER | 76286 | 76286 |         0 |
-    +----------------------+-------+----------+----------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
-    1 row in set
+    1. 查看 Client Session 的详细状态。
 
-    obclient [(none)]> SHOW PROXYSESSION ATTRIBUTE;
-    +----------------------------------+----------------------+----------------+
-    | attribute_name                   | value                | info           |
-    +----------------------------------+----------------------+----------------+
-    | proxy_sessid                     | -6044239443189891054 | cs common      |
-    | cs_id                            | 65160                | cs common      |
-    | cluster                          | test420              | cs common      |
-    | tenant                           | mysql001             | cs common      |
-    | user                             | root                 | cs common      |
-    | host_ip                          | 100.xx.xx.xx         | cs common      |
-    | host_port                        | 48056                | cs common      |
-    | db                               | NULL                 | cs common      |
-    | total_trans_cnt                  | 0                    | cs common      |
-    | svr_session_cnt                  | 1                    | cs common      |
-    | active                           | true                 | cs common      |
-    | read_state                       | MCS_ACTIVE_READER    | cs common      |
-    | tid                              | 76286                | cs common      |
-    | pid                              | 76286                | cs common      |
-    | idc_name                         |                      | cs common      |
-    | modified_time                    | 0                    | cs stat        |
-    | reported_time                    | 0                    | cs stat        |
-    | hot_sys_var_version              | 0                    | cs var version |
-    | sys_var_version                  | 2                    | cs var version |
-    | user_var_version                 | 0                    | cs var version |
-    | last_insert_id_version           | 0                    | cs var version |
-    | db_name_version                  | 0                    | cs var version |
-    | server_ip                        | 172.xx.xx.xx         | last used ss   |
-    | server_port                      | 2881                 | last used ss   |
-    | server_sessid                    | 3221597019           | last used ss   |
-    | ss_id                            | 22                   | last used ss   |
-    | state                            | MSS_KA_CLIENT_SLAVE  | last used ss   |
-    | transact_count                   | 4                    | last used ss   |
-    | server_trans_stat                | 0                    | last used ss   |
-    | hot_sys_var_version              | 0                    | last used ss   |
-    | sys_var_version                  | 2                    | last used ss   |
-    | user_var_version                 | 0                    | last used ss   |
-    | last_insert_id_version           | 0                    | last used ss   |
-    | db_name_version                  | 0                    | last used ss   |
-    | is_checksum_supported            | 1                    | last used ss   |
-    | is_safe_read_weak_supported      | 0                    | last used ss   |
-    | is_checksum_switch_supported     | 1                    | last used ss   |
-    | checksum_switch                  | 1                    | last used ss   |
-    | enable_extra_ok_packet_for_stats | 1                    | last used ss   |
-    +----------------------------------+----------------------+----------------+
-    39 rows in set
+       ```sql
+       SHOW PROXYSESSION ATTRIBUTE;
+       ```
 
-    obclient [(none)]> SHOW PROXYSESSION ATTRIBUTE 65160 LIKE '%id%';
-    +------------------------+----------------------+----------------+
-    | attribute_name         | value                | info           |
-    +------------------------+----------------------+----------------+
-    | proxy_sessid           | -6044239443189891054 | cs common      |
-    | cs_id                  | 65160                | cs common      |
-    | tid                    | 76286                | cs common      |
-    | pid                    | 76286                | cs common      |
-    | idc_name               |                      | cs common      |
-    | last_insert_id_version | 0                    | cs var version |
-    | server_sessid          | 3221597019           | last used ss   |
-    | ss_id                  | 22                   | last used ss   |
-    | last_insert_id_version | 0                    | last used ss   |
-    +------------------------+----------------------+----------------+
-    9 rows in set
-    ```
+       查询结果如下：
+
+       ```shell
+       +----------------------------------+----------------------+----------------+
+       | attribute_name                   | value                | info           |
+       +----------------------------------+----------------------+----------------+
+       | proxy_sessid                     | -6044239443189891054 | cs common      |
+       | cs_id                            | 65160                | cs common      |
+       | cluster                          | test420              | cs common      |
+       | tenant                           | mysql001             | cs common      |
+       | user                             | root                 | cs common      |
+       | host_ip                          | 100.xx.xx.xx         | cs common      |
+       | host_port                        | 48056                | cs common      |
+       | db                               | NULL                 | cs common      |
+       | total_trans_cnt                  | 0                    | cs common      |
+       | svr_session_cnt                  | 1                    | cs common      |
+       | active                           | true                 | cs common      |
+       | read_state                       | MCS_ACTIVE_READER    | cs common      |
+       | tid                              | 76286                | cs common      |
+       | pid                              | 76286                | cs common      |
+       | idc_name                         |                      | cs common      |
+       | modified_time                    | 0                    | cs stat        |
+       | reported_time                    | 0                    | cs stat        |
+       | hot_sys_var_version              | 0                    | cs var version |
+       | sys_var_version                  | 2                    | cs var version |
+       | user_var_version                 | 0                    | cs var version |
+       | last_insert_id_version           | 0                    | cs var version |
+       | db_name_version                  | 0                    | cs var version |
+       | server_ip                        | 172.xx.xx.xx         | last used ss   |
+       | server_port                      | 2881                 | last used ss   |
+       | server_sessid                    | 3221597019           | last used ss   |
+       | ss_id                            | 22                   | last used ss   |
+       | state                            | MSS_KA_CLIENT_SLAVE  | last used ss   |
+       | transact_count                   | 4                    | last used ss   |
+       | server_trans_stat                | 0                    | last used ss   |
+       | hot_sys_var_version              | 0                    | last used ss   |
+       | sys_var_version                  | 2                    | last used ss   |
+       | user_var_version                 | 0                    | last used ss   |
+       | last_insert_id_version           | 0                    | last used ss   |
+       | db_name_version                  | 0                    | last used ss   |
+       | is_checksum_supported            | 1                    | last used ss   |
+       | is_safe_read_weak_supported      | 0                    | last used ss   |
+       | is_checksum_switch_supported     | 1                    | last used ss   |
+       | checksum_switch                  | 1                    | last used ss   |
+       | enable_extra_ok_packet_for_stats | 1                    | last used ss   |
+       +----------------------------------+----------------------+----------------+
+       39 rows in set
+       ```
+
+    2. 通过模糊查询，查询指定属性的详细信息。
+
+       ```sql
+       SHOW PROXYSESSION ATTRIBUTE 65160 like '%id%';
+       ```
+
+       查询结果如下：
+
+       ```shell
+       +------------------------+----------------------+----------------+
+       | attribute_name         | value                | info           |
+       +------------------------+----------------------+----------------+
+       | proxy_sessid           | -6044239443189891054 | cs common      |
+       | cs_id                  | 65160                | cs common      |
+       | tid                    | 76286                | cs common      |
+       | pid                    | 76286                | cs common      |
+       | idc_name               |                      | cs common      |
+       | last_insert_id_version | 0                    | cs var version |
+       | server_sessid          | 3221597019           | last used ss   |
+       | ss_id                  | 22                   | last used ss   |
+       | last_insert_id_version | 0                    | last used ss   |
+       +------------------------+----------------------+----------------+
+       9 rows in set
+       ```
 
     tab Oracle 模式
 
-    ```shell
-    obclient [SYS]> SHOW PROXYSESSION;
-    +----------------------+-------+----------+-----------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
-    | proxy_sessid         | Id    | Cluster  | Tenant    | User | Host                 | db   | trans_count | svr_session_count | state             | tid   | pid   | using_ssl |
-    +----------------------+-------+----------+-----------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
-    | 12402504630519660558 | 65141 | test420  | oracle001 | sys  | 100.xx.xx.xx:59648   | SYS  |           0 |                 1 | MCS_ACTIVE_READER | 76286 | 76286 |         0 |
-    +----------------------+-------+----------+-----------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
-    1 row in set
+    1. 查看 Client Session 的详细状态。
 
-    obclient [SYS]> SHOW PROXYSESSION ATTRIBUTE;
-    +----------------------------------+----------------------+----------------+
-    | attribute_name                   | value                | info           |
-    +----------------------------------+----------------------+----------------+
-    | proxy_sessid                     | -6044239443189891058 | cs common      |
-    | cs_id                            | 65141                | cs common      |
-    | cluster                          | test420              | cs common      |
-    | tenant                           | oracle001            | cs common      |
-    | user                             | sys                  | cs common      |
-    | host_ip                          | 100.xx.xx.xx         | cs common      |
-    | host_port                        | 59648                | cs common      |
-    | db                               | SYS                  | cs common      |
-    | total_trans_cnt                  | 0                    | cs common      |
-    | svr_session_cnt                  | 1                    | cs common      |
-    | active                           | true                 | cs common      |
-    | read_state                       | MCS_ACTIVE_READER    | cs common      |
-    | tid                              | 76286                | cs common      |
-    | pid                              | 76286                | cs common      |
-    | idc_name                         |                      | cs common      |
-    | modified_time                    | 0                    | cs stat        |
-    | reported_time                    | 0                    | cs stat        |
-    | hot_sys_var_version              | 1                    | cs var version |
-    | sys_var_version                  | 10                   | cs var version |
-    | user_var_version                 | 0                    | cs var version |
-    | last_insert_id_version           | 0                    | cs var version |
-    | db_name_version                  | 1                    | cs var version |
-    | server_ip                        | xx.xx.xx.xx          | last used ss   |
-    | server_port                      | 2881                 | last used ss   |
-    | server_sessid                    | 3221583071           | last used ss   |
-    | ss_id                            | 18                   | last used ss   |
-    | state                            | MSS_KA_CLIENT_SLAVE  | last used ss   |
-    | transact_count                   | 4                    | last used ss   |
-    | server_trans_stat                | 0                    | last used ss   |
-    | hot_sys_var_version              | 1                    | last used ss   |
-    | sys_var_version                  | 10                   | last used ss   |
-    | user_var_version                 | 0                    | last used ss   |
-    | last_insert_id_version           | 0                    | last used ss   |
-    | db_name_version                  | 1                    | last used ss   |
-    | is_checksum_supported            | 1                    | last used ss   |
-    | is_safe_read_weak_supported      | 0                    | last used ss   |
-    | is_checksum_switch_supported     | 1                    | last used ss   |
-    | checksum_switch                  | 1                    | last used ss   |
-    | enable_extra_ok_packet_for_stats | 1                    | last used ss   |
-    +----------------------------------+----------------------+----------------+
-    39 rows in set
+       ```sql
+       SHOW PROXYSESSION ATTRIBUTE;
+       ```
 
-    obclient [SYS]> SHOW PROXYSESSION ATTRIBUTE 65141 like '%id%';
-    +------------------------+----------------------+----------------+
-    | attribute_name         | value                | info           |
-    +------------------------+----------------------+----------------+
-    | proxy_sessid           | -6044239443189891058 | cs common      |
-    | cs_id                  | 65141                | cs common      |
-    | tid                    | 76286                | cs common      |
-    | pid                    | 76286                | cs common      |
-    | idc_name               |                      | cs common      |
-    | last_insert_id_version | 0                    | cs var version |
-    | server_sessid          | 3221583071           | last used ss   |
-    | ss_id                  | 18                   | last used ss   |
-    | last_insert_id_version | 0                    | last used ss   |
-    +------------------------+----------------------+----------------+
-    9 rows in set
-    ```
+       查询结果如下：
+
+       ```shell
+       +----------------------------------+----------------------+----------------+
+       | attribute_name                   | value                | info           |
+       +----------------------------------+----------------------+----------------+
+       | proxy_sessid                     | -6044239443189891058 | cs common      |
+       | cs_id                            | 65141                | cs common      |
+       | cluster                          | test420              | cs common      |
+       | tenant                           | oracle001            | cs common      |
+       | user                             | sys                  | cs common      |
+       | host_ip                          | 100.xx.xx.xx         | cs common      |
+       | host_port                        | 59648                | cs common      |
+       | db                               | SYS                  | cs common      |
+       | total_trans_cnt                  | 0                    | cs common      |
+       | svr_session_cnt                  | 1                    | cs common      |
+       | active                           | true                 | cs common      |
+       | read_state                       | MCS_ACTIVE_READER    | cs common      |
+       | tid                              | 76286                | cs common      |
+       | pid                              | 76286                | cs common      |
+       | idc_name                         |                      | cs common      |
+       | modified_time                    | 0                    | cs stat        |
+       | reported_time                    | 0                    | cs stat        |
+       | hot_sys_var_version              | 1                    | cs var version |
+       | sys_var_version                  | 10                   | cs var version |
+       | user_var_version                 | 0                    | cs var version |
+       | last_insert_id_version           | 0                    | cs var version |
+       | db_name_version                  | 1                    | cs var version |
+       | server_ip                        | xx.xx.xx.xx          | last used ss   |
+       | server_port                      | 2881                 | last used ss   |
+       | server_sessid                    | 3221583071           | last used ss   |
+       | ss_id                            | 18                   | last used ss   |
+       | state                            | MSS_KA_CLIENT_SLAVE  | last used ss   |
+       | transact_count                   | 4                    | last used ss   |
+       | server_trans_stat                | 0                    | last used ss   |
+       | hot_sys_var_version              | 1                    | last used ss   |
+       | sys_var_version                  | 10                   | last used ss   |
+       | user_var_version                 | 0                    | last used ss   |
+       | last_insert_id_version           | 0                    | last used ss   |
+       | db_name_version                  | 1                    | last used ss   |
+       | is_checksum_supported            | 1                    | last used ss   |
+       | is_safe_read_weak_supported      | 0                    | last used ss   |
+       | is_checksum_switch_supported     | 1                    | last used ss   |
+       | checksum_switch                  | 1                    | last used ss   |
+       | enable_extra_ok_packet_for_stats | 1                    | last used ss   |
+       +----------------------------------+----------------------+----------------+
+       39 rows in set
+       ```
+
+    2. 通过模糊查询，查询指定属性的详细信息。
+
+       ```sql
+       SHOW PROXYSESSION ATTRIBUTE 65141 LIKE '%id%';
+       ```
+
+       查询结果如下：
+
+       ```shell
+       +------------------------+----------------------+----------------+
+       | attribute_name         | value                | info           |
+       +------------------------+----------------------+----------------+
+       | proxy_sessid           | -6044239443189891058 | cs common      |
+       | cs_id                  | 65141                | cs common      |
+       | tid                    | 76286                | cs common      |
+       | pid                    | 76286                | cs common      |
+       | idc_name               |                      | cs common      |
+       | last_insert_id_version | 0                    | cs var version |
+       | server_sessid          | 3221583071           | last used ss   |
+       | ss_id                  | 18                   | last used ss   |
+       | last_insert_id_version | 0                    | last used ss   |
+       +------------------------+----------------------+----------------+
+       9 rows in set
+       ```
 
     :::
 
@@ -239,5 +255,5 @@
     | is_checksum_supported            | ?                    |
     | is_safe_read_weak_supported      | ?                    |
     | is_checksum_switch_supported     | ?                    |
-    | checksum_switch                  | /                    |
+    | checksum_switch                  |                     |
     | enable_extra_ok_packet_for_stats | ?                    |
