--- a/zh-CN/700.reference/1200.database-proxy/500.logical-connection/300.displays-session-statistics.md
+++ b/zh-CN/700.reference/1200.database-proxy/500.logical-connection/300.displays-session-statistics.md
@@ -19,489 +19,181 @@
 2. 查看 ODP 指定 Client Session 的内部统计项。
 
     ```sql
-    SHOW PROXYSESSION STAT id [LIKE 'xx'];
+    SHOW PROXYSESSION STAT id LIKE 'xx';
     ```
 
     参数说明：
 
-    * `id` 既可以是 `cs_id`，也可以是 `CONNECTION_ID`，显示结果相同。
+    * `id` 既可以是 `cs_id`，也可以是 `connection_id` ，显示结果相同。
 
-      `cs_id` 为 ODP 内部标记的每个 Client 的 `id` 号，`CONNECTION_ID` 为整个 OceanBase 数据库标记的每个 Client 的 `id` 号。
+      `cs_id` 为 ODP 内部标记的每个 Client 的 `id` 号，`connection_id`  为整个 OceanBase 数据库标记的每个 Client 的 `id` 号。
 
-      MySQL 模式下的 `CONNECTION_ID` 通过 `SELECT CONNECTION_ID();` 语句获取，Oracle 模式下的 `CONNECTION_ID` 通过 `SHOW FULL PROCESSLIST;` 语句获取。
+      MySQL 模式下的 `connection_id`  通过 `SELECT CONNECTION_ID();` 语句获取，Oracle 模式下的 `connection_id`  通过 `SHOW FULL PROCESSLIST;` 语句获取。
 
-    * `like` 模糊匹配，支持 '%' 和 '_' 。
+    * `LIKE` 表示模糊匹配，支持 '%' 和 '_' 。
 
     示例如下：
 
     :::tab
     tab MySQL 模式
 
-    ```shell
-    obclient [(none)]> SHOW PROXYSESSION;
-    +----------------------+-------+----------+----------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
-    | proxy_sessid         | Id    | Cluster  | Tenant   | User | Host                 | db   | trans_count | svr_session_count | state             | tid   | pid   | using_ssl |
-    +----------------------+-------+----------+----------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
-    | 12402504630519660562 | 65160 | test420  | mysql001 | root | 100.xx.xx.xx:48056   | NULL |           0 |                 1 | MCS_ACTIVE_READER | 76286 | 76286 |         0 |
-    +----------------------+-------+----------+----------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
-    1 row in set
+    1. 获取 `cs_id` 或 `connection_id` 。
 
-    obclient [(none)]> SHOW PROXYSESSION STAT 65160;
-    +--------------------------------------+-------+
-    | stat_name                            | value |
-    +--------------------------------------+-------+
-    | total_transaction_count              |     0 |
-    | total_user_transaction_count         |     0 |
-    | total_query_count                    |     0 |
-    | total_client_request_reread_count    |     0 |
-    | total_server_response_reread_count   |     0 |
-    | client_request_total_size            |     0 |
-    | client_response_total_size           |     0 |
-    | server_request_total_size            |     0 |
-    | server_response_total_size           |     0 |
-    | total_transactions_time              |     0 |
-    | total_user_transactions_time         |     0 |
-    | total_client_request_read_time       |     0 |
-    | total_client_response_write_time     |     0 |
-    | total_client_request_analyze_time    |     0 |
-    | total_client_transaction_idle_time   |     0 |
-    | total_ok_packet_trim_time            |     0 |
-    | total_server_process_request_time    |     0 |
-    | total_server_response_read_time      |     0 |
-    | total_server_response_analyze_time   |     0 |
-    | total_send_saved_login_time          |     0 |
-    | total_send_all_session_vars_time     |     0 |
-    | total_send_use_database_time         |     0 |
-    | total_send_changed_session_vars_time |     0 |
-    | total_send_last_insert_id_time       |     0 |
-    | total_send_start_trans_time          |     0 |
-    | total_pl_lookup_time                 |     0 |
-    | total_congestion_control_time        |     0 |
-    | total_server_connect_time            |     0 |
-    | client_requests                      |     0 |
-    | client_large_requests                |     0 |
-    | client_internal_requests             |     0 |
-    | local_session_state_requests         |     0 |
-    | client_missing_pk_requests           |     0 |
-    | client_completed_requests            |     0 |
-    | client_connection_abort_count        |     0 |
-    | client_select_requests               |     0 |
-    | client_insert_requests               |     0 |
-    | client_update_requests               |     0 |
-    | client_delete_requests               |     0 |
-    | client_other_requests                |     0 |
-    | request_size_100_count               |     0 |
-    | request_size_1K_count                |     0 |
-    | request_size_3K_count                |     0 |
-    | request_size_5K_count                |     0 |
-    | request_size_10K_count               |     0 |
-    | request_size_1M_count                |     0 |
-    | request_size_inf_count               |     0 |
-    | response_size_100_count              |     0 |
-    | response_size_1K_count               |     0 |
-    | response_size_3K_count               |     0 |
-    | response_size_5K_count               |     0 |
-    | response_size_10K_count              |     0 |
-    | response_size_1M_count               |     0 |
-    | response_size_inf_count              |     0 |
-    | client_speed_bytes_per_sec_100       |     0 |
-    | client_speed_bytes_per_sec_1K        |     0 |
-    | client_speed_bytes_per_sec_10K       |     0 |
-    | client_speed_bytes_per_sec_100K      |     0 |
-    | client_speed_bytes_per_sec_1M        |     0 |
-    | client_speed_bytes_per_sec_10M       |     0 |
-    | client_speed_bytes_per_sec_100M      |     0 |
-    | server_speed_bytes_per_sec_100       |     0 |
-    | server_speed_bytes_per_sec_1K        |     0 |
-    | server_speed_bytes_per_sec_10K       |     0 |
-    | server_speed_bytes_per_sec_100K      |     0 |
-    | server_speed_bytes_per_sec_1M        |     0 |
-    | server_speed_bytes_per_sec_10M       |     0 |
-    | server_speed_bytes_per_sec_100M      |     0 |
-    | server_connect_count                 |     0 |
-    | server_connect_retries               |     0 |
-    | server_pl_lookup_count               |     0 |
-    | server_pl_lookup_retries             |     0 |
-    | broken_server_connections            |     0 |
-    | server_requests                      |     0 |
-    | server_responses                     |     0 |
-    | server_error_responses               |     0 |
-    | server_resultset_responses           |     0 |
-    | server_ok_responses                  |     0 |
-    | server_other_responses               |     0 |
-    | send_saved_login_requests            |     0 |
-    | send_all_session_vars_requests       |     0 |
-    | send_use_database_requests           |     0 |
-    | send_changed_session_vars_requests   |     0 |
-    | send_last_insert_id_requests         |     0 |
-    | send_start_trans_requests            |     0 |
-    | vip_to_tenant_cache_hit              |     0 |
-    | vip_to_tenant_cache_miss             |     0 |
-    +--------------------------------------+-------+
-    87 rows in set
+       执行以下语句获取 `cs_id`。
 
-    obclient [(none)]> SELECT CONNECTION_ID();
-    +-----------------+
-    | CONNECTION_ID() |
-    +-----------------+
-    |      3221597019 |
-    +-----------------+
-    1 row in set
+       ```sql
+       SHOW PROXYSESSION;
+       ```
 
-    obclient [(none)]> SHOW PROXYSESSION STAT 3221597019;
-    +--------------------------------------+-------+
-    | stat_name                            | value |
-    +--------------------------------------+-------+
-    | total_transaction_count              |     0 |
-    | total_user_transaction_count         |     0 |
-    | total_query_count                    |     0 |
-    | total_client_request_reread_count    |     0 |
-    | total_server_response_reread_count   |     0 |
-    | client_request_total_size            |     0 |
-    | client_response_total_size           |     0 |
-    | server_request_total_size            |     0 |
-    | server_response_total_size           |     0 |
-    | total_transactions_time              |     0 |
-    | total_user_transactions_time         |     0 |
-    | total_client_request_read_time       |     0 |
-    | total_client_response_write_time     |     0 |
-    | total_client_request_analyze_time    |     0 |
-    | total_client_transaction_idle_time   |     0 |
-    | total_ok_packet_trim_time            |     0 |
-    | total_server_process_request_time    |     0 |
-    | total_server_response_read_time      |     0 |
-    | total_server_response_analyze_time   |     0 |
-    | total_send_saved_login_time          |     0 |
-    | total_send_all_session_vars_time     |     0 |
-    | total_send_use_database_time         |     0 |
-    | total_send_changed_session_vars_time |     0 |
-    | total_send_last_insert_id_time       |     0 |
-    | total_send_start_trans_time          |     0 |
-    | total_pl_lookup_time                 |     0 |
-    | total_congestion_control_time        |     0 |
-    | total_server_connect_time            |     0 |
-    | client_requests                      |     0 |
-    | client_large_requests                |     0 |
-    | client_internal_requests             |     0 |
-    | local_session_state_requests         |     0 |
-    | client_missing_pk_requests           |     0 |
-    | client_completed_requests            |     0 |
-    | client_connection_abort_count        |     0 |
-    | client_select_requests               |     0 |
-    | client_insert_requests               |     0 |
-    | client_update_requests               |     0 |
-    | client_delete_requests               |     0 |
-    | client_other_requests                |     0 |
-    | request_size_100_count               |     0 |
-    | request_size_1K_count                |     0 |
-    | request_size_3K_count                |     0 |
-    | request_size_5K_count                |     0 |
-    | request_size_10K_count               |     0 |
-    | request_size_1M_count                |     0 |
-    | request_size_inf_count               |     0 |
-    | response_size_100_count              |     0 |
-    | response_size_1K_count               |     0 |
-    | response_size_3K_count               |     0 |
-    | response_size_5K_count               |     0 |
-    | response_size_10K_count              |     0 |
-    | response_size_1M_count               |     0 |
-    | response_size_inf_count              |     0 |
-    | client_speed_bytes_per_sec_100       |     0 |
-    | client_speed_bytes_per_sec_1K        |     0 |
-    | client_speed_bytes_per_sec_10K       |     0 |
-    | client_speed_bytes_per_sec_100K      |     0 |
-    | client_speed_bytes_per_sec_1M        |     0 |
-    | client_speed_bytes_per_sec_10M       |     0 |
-    | client_speed_bytes_per_sec_100M      |     0 |
-    | server_speed_bytes_per_sec_100       |     0 |
-    | server_speed_bytes_per_sec_1K        |     0 |
-    | server_speed_bytes_per_sec_10K       |     0 |
-    | server_speed_bytes_per_sec_100K      |     0 |
-    | server_speed_bytes_per_sec_1M        |     0 |
-    | server_speed_bytes_per_sec_10M       |     0 |
-    | server_speed_bytes_per_sec_100M      |     0 |
-    | server_connect_count                 |     0 |
-    | server_connect_retries               |     0 |
-    | server_pl_lookup_count               |     0 |
-    | server_pl_lookup_retries             |     0 |
-    | broken_server_connections            |     0 |
-    | server_requests                      |     0 |
-    | server_responses                     |     0 |
-    | server_error_responses               |     0 |
-    | server_resultset_responses           |     0 |
-    | server_ok_responses                  |     0 |
-    | server_other_responses               |     0 |
-    | send_saved_login_requests            |     0 |
-    | send_all_session_vars_requests       |     0 |
-    | send_use_database_requests           |     0 |
-    | send_changed_session_vars_requests   |     0 |
-    | send_last_insert_id_requests         |     0 |
-    | send_start_trans_requests            |     0 |
-    | vip_to_tenant_cache_hit              |     0 |
-    | vip_to_tenant_cache_miss             |     0 |
-    +--------------------------------------+-------+
-    87 rows in set
-    ```
+       返回如下所示结果，返回结果中的 `Id` 即为 `cs_id`。
 
-    obclient [(none)]> SHOW PROXYSESSION STAT 3221597019 LIKE "%time%";
-    +--------------------------------------+-------+
-    | stat_name                            | value |
-    +--------------------------------------+-------+
-    | total_transactions_time              |     0 |
-    | total_user_transactions_time         |     0 |
-    | total_client_request_read_time       |     0 |
-    | total_client_response_write_time     |     0 |
-    | total_client_request_analyze_time    |     0 |
-    | total_client_transaction_idle_time   |     0 |
-    | total_ok_packet_trim_time            |     0 |
-    | total_server_process_request_time    |     0 |
-    | total_server_response_read_time      |     0 |
-    | total_server_response_analyze_time   |     0 |
-    | total_send_saved_login_time          |     0 |
-    | total_send_all_session_vars_time     |     0 |
-    | total_send_use_database_time         |     0 |
-    | total_send_changed_session_vars_time |     0 |
-    | total_send_last_insert_id_time       |     0 |
-    | total_send_start_trans_time          |     0 |
-    | total_pl_lookup_time                 |     0 |
-    | total_congestion_control_time        |     0 |
-    | total_server_connect_time            |     0 |
-    +--------------------------------------+-------+
-    19 rows in set
+       ```shell
+       +----------------------+-------+----------+----------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
+       | proxy_sessid         | Id    | Cluster  | Tenant   | User | Host                 | db   | trans_count | svr_session_count | state             | tid   | pid   | using_ssl |
+       +----------------------+-------+----------+----------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
+       | 12402504630519660562 | 11    | test420  | mysql001 | root | 100.xx.xx.xx:48056   | NULL |           0 |                 1 | MCS_ACTIVE_READER | 76286 | 76286 |         0 |
+       +----------------------+-------+----------+----------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
+       1 row in set
+       ```
+
+       执行以下语句获取 `connection_id` 。
+
+       ```sql
+       SELECT CONNECTION_ID();
+       ```
+
+       返回如下所示结果。
+
+       ```shell
+       +-----------------+
+       | CONNECTION_ID() |
+       +-----------------+
+       |      3221597019 |
+       +-----------------+
+       1 row in set
+       ```
+
+    2. 查看内部统计项。
+
+       ```sql
+       SHOW PROXYSESSION STAT 11 LIKE '%time%';
+       ```
+
+       或者
+
+       ```sql
+       SHOW PROXYSESSION STAT 3221597019 LIKE '%time%';
+       ```
+
+       返回结果如下所示：
+
+       ```shell
+       +-------------------------------------------+-------+
+       | stat_name                                 | value |
+       +-------------------------------------------+-------+
+       | total_transactions_time                   |     0 |
+       | total_user_transactions_time              |     0 |
+       | total_client_request_read_time            |     0 |
+       | total_client_response_write_time          |     0 |
+       | total_client_request_analyze_time         |     0 |
+       | total_client_transaction_idle_time        |     0 |
+       | total_ok_packet_trim_time                 |     0 |
+       | total_server_process_request_time         |     0 |
+       | total_server_response_read_time           |     0 |
+       | total_server_response_analyze_time        |     0 |
+       | total_send_saved_login_time               |     0 |
+       | total_send_all_session_vars_time          |     0 |
+       | total_send_use_database_time              |     0 |
+       | total_send_changed_session_vars_time      |     0 |
+       | total_send_changed_session_user_vars_time |     0 |
+       | total_send_last_insert_id_time            |     0 |
+       | total_send_start_trans_time               |     0 |
+       | total_pl_lookup_time                      |     0 |
+       | total_congestion_control_time             |     0 |
+       | total_server_connect_time                 |     0 |
+       +-------------------------------------------+-------+
+       20 rows in set
+       ```
 
     tab Oracle 模式
 
-    ```sql
-    obclient [SYS]> SHOW PROXYSESSION;
-    +----------------------+-------+----------+-----------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
-    | proxy_sessid         | Id    | Cluster  | Tenant    | User | Host                 | db   | trans_count | svr_session_count | state             | tid   | pid   | using_ssl |
-    +----------------------+-------+----------+-----------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
-    | 12402504630519660558 | 65141 | test420  | oracle001 | sys  | 100.xx.xx.xx:59648   | SYS  |           0 |                 1 | MCS_ACTIVE_READER | 76286 | 76286 |         0 |
-    +----------------------+-------+----------+-----------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
-    1 row in set
-    
-    obclient [SYS]> SHOW PROXYSESSION STAT 65141;
-    +--------------------------------------+-------+
-    | stat_name                            | value |
-    +--------------------------------------+-------+
-    | total_transaction_count              |     0 |
-    | total_user_transaction_count         |     0 |
-    | total_query_count                    |     0 |
-    | total_client_request_reread_count    |     0 |
-    | total_server_response_reread_count   |     0 |
-    | client_request_total_size            |     0 |
-    | client_response_total_size           |     0 |
-    | server_request_total_size            |     0 |
-    | server_response_total_size           |     0 |
-    | total_transactions_time              |     0 |
-    | total_user_transactions_time         |     0 |
-    | total_client_request_read_time       |     0 |
-    | total_client_response_write_time     |     0 |
-    | total_client_request_analyze_time    |     0 |
-    | total_client_transaction_idle_time   |     0 |
-    | total_ok_packet_trim_time            |     0 |
-    | total_server_process_request_time    |     0 |
-    | total_server_response_read_time      |     0 |
-    | total_server_response_analyze_time   |     0 |
-    | total_send_saved_login_time          |     0 |
-    | total_send_all_session_vars_time     |     0 |
-    | total_send_use_database_time         |     0 |
-    | total_send_changed_session_vars_time |     0 |
-    | total_send_last_insert_id_time       |     0 |
-    | total_send_start_trans_time          |     0 |
-    | total_pl_lookup_time                 |     0 |
-    | total_congestion_control_time        |     0 |
-    | total_server_connect_time            |     0 |
-    | client_requests                      |     0 |
-    | client_large_requests                |     0 |
-    | client_internal_requests             |     0 |
-    | local_session_state_requests         |     0 |
-    | client_missing_pk_requests           |     0 |
-    | client_completed_requests            |     0 |
-    | client_connection_abort_count        |     0 |
-    | client_select_requests               |     0 |
-    | client_insert_requests               |     0 |
-    | client_update_requests               |     0 |
-    | client_delete_requests               |     0 |
-    | client_other_requests                |     0 |
-    | request_size_100_count               |     0 |
-    | request_size_1K_count                |     0 |
-    | request_size_3K_count                |     0 |
-    | request_size_5K_count                |     0 |
-    | request_size_10K_count               |     0 |
-    | request_size_1M_count                |     0 |
-    | request_size_inf_count               |     0 |
-    | response_size_100_count              |     0 |
-    | response_size_1K_count               |     0 |
-    | response_size_3K_count               |     0 |
-    | response_size_5K_count               |     0 |
-    | response_size_10K_count              |     0 |
-    | response_size_1M_count               |     0 |
-    | response_size_inf_count              |     0 |
-    | client_speed_bytes_per_sec_100       |     0 |
-    | client_speed_bytes_per_sec_1K        |     0 |
-    | client_speed_bytes_per_sec_10K       |     0 |
-    | client_speed_bytes_per_sec_100K      |     0 |
-    | client_speed_bytes_per_sec_1M        |     0 |
-    | client_speed_bytes_per_sec_10M       |     0 |
-    | client_speed_bytes_per_sec_100M      |     0 |
-    | server_speed_bytes_per_sec_100       |     0 |
-    | server_speed_bytes_per_sec_1K        |     0 |
-    | server_speed_bytes_per_sec_10K       |     0 |
-    | server_speed_bytes_per_sec_100K      |     0 |
-    | server_speed_bytes_per_sec_1M        |     0 |
-    | server_speed_bytes_per_sec_10M       |     0 |
-    | server_speed_bytes_per_sec_100M      |     0 |
-    | server_connect_count                 |     0 |
-    | server_connect_retries               |     0 |
-    | server_pl_lookup_count               |     0 |
-    | server_pl_lookup_retries             |     0 |
-    | broken_server_connections            |     0 |
-    | server_requests                      |     0 |
-    | server_responses                     |     0 |
-    | server_error_responses               |     0 |
-    | server_resultset_responses           |     0 |
-    | server_ok_responses                  |     0 |
-    | server_other_responses               |     0 |
-    | send_saved_login_requests            |     0 |
-    | send_all_session_vars_requests       |     0 |
-    | send_use_database_requests           |     0 |
-    | send_changed_session_vars_requests   |     0 |
-    | send_last_insert_id_requests         |     0 |
-    | send_start_trans_requests            |     0 |
-    | vip_to_tenant_cache_hit              |     0 |
-    | vip_to_tenant_cache_miss             |     0 |
-    +--------------------------------------+-------+
-    87 rows in set
+    1. 获取 `cs_id` 或 `connection_id` 。
 
-    obclient [SYS]> SHOW FULL PROCESSLIST;
-    +------------+------+-----------+---------------------+------+---------+------+--------+-----------------------+---------------+------+
-    | ID         | USER | TENANT    | HOST                | DB   | COMMAND | TIME | STATE  | INFO                  | IP            | PORT |
-    +------------+------+-----------+---------------------+------+---------+------+--------+-----------------------+---------------+------+
-    | 3221583071 | SYS  | oracle001 | 172.xx.xx.xx:45343  | SYS  | Query   |    0 | ACTIVE | SHOW FULL PROCESSLIST | 172.xx.xx.64  | 2881 |
-    +------------+------+-----------+---------------------+------+---------+------+--------+-----------------------+---------------+------+
-    1 row in set    
+       执行以下语句获取 `cs_id`。
 
-    obclient [SYS]> SHOW PROXYSESSION STAT 3221583071;
-    +--------------------------------------+-------+
-    | stat_name                            | value |
-    +--------------------------------------+-------+
-    | total_transaction_count              |     0 |
-    | total_user_transaction_count         |     0 |
-    | total_query_count                    |     0 |
-    | total_client_request_reread_count    |     0 |
-    | total_server_response_reread_count   |     0 |
-    | client_request_total_size            |     0 |
-    | client_response_total_size           |     0 |
-    | server_request_total_size            |     0 |
-    | server_response_total_size           |     0 |
-    | total_transactions_time              |     0 |
-    | total_user_transactions_time         |     0 |
-    | total_client_request_read_time       |     0 |
-    | total_client_response_write_time     |     0 |
-    | total_client_request_analyze_time    |     0 |
-    | total_client_transaction_idle_time   |     0 |
-    | total_ok_packet_trim_time            |     0 |
-    | total_server_process_request_time    |     0 |
-    | total_server_response_read_time      |     0 |
-    | total_server_response_analyze_time   |     0 |
-    | total_send_saved_login_time          |     0 |
-    | total_send_all_session_vars_time     |     0 |
-    | total_send_use_database_time         |     0 |
-    | total_send_changed_session_vars_time |     0 |
-    | total_send_last_insert_id_time       |     0 |
-    | total_send_start_trans_time          |     0 |
-    | total_pl_lookup_time                 |     0 |
-    | total_congestion_control_time        |     0 |
-    | total_server_connect_time            |     0 |
-    | client_requests                      |     0 |
-    | client_large_requests                |     0 |
-    | client_internal_requests             |     0 |
-    | local_session_state_requests         |     0 |
-    | client_missing_pk_requests           |     0 |
-    | client_completed_requests            |     0 |
-    | client_connection_abort_count        |     0 |
-    | client_select_requests               |     0 |
-    | client_insert_requests               |     0 |
-    | client_update_requests               |     0 |
-    | client_delete_requests               |     0 |
-    | client_other_requests                |     0 |
-    | request_size_100_count               |     0 |
-    | request_size_1K_count                |     0 |
-    | request_size_3K_count                |     0 |
-    | request_size_5K_count                |     0 |
-    | request_size_10K_count               |     0 |
-    | request_size_1M_count                |     0 |
-    | request_size_inf_count               |     0 |
-    | response_size_100_count              |     0 |
-    | response_size_1K_count               |     0 |
-    | response_size_3K_count               |     0 |
-    | response_size_5K_count               |     0 |
-    | response_size_10K_count              |     0 |
-    | response_size_1M_count               |     0 |
-    | response_size_inf_count              |     0 |
-    | client_speed_bytes_per_sec_100       |     0 |
-    | client_speed_bytes_per_sec_1K        |     0 |
-    | client_speed_bytes_per_sec_10K       |     0 |
-    | client_speed_bytes_per_sec_100K      |     0 |
-    | client_speed_bytes_per_sec_1M        |     0 |
-    | client_speed_bytes_per_sec_10M       |     0 |
-    | client_speed_bytes_per_sec_100M      |     0 |
-    | server_speed_bytes_per_sec_100       |     0 |
-    | server_speed_bytes_per_sec_1K        |     0 |
-    | server_speed_bytes_per_sec_10K       |     0 |
-    | server_speed_bytes_per_sec_100K      |     0 |
-    | server_speed_bytes_per_sec_1M        |     0 |
-    | server_speed_bytes_per_sec_10M       |     0 |
-    | server_speed_bytes_per_sec_100M      |     0 |
-    | server_connect_count                 |     0 |
-    | server_connect_retries               |     0 |
-    | server_pl_lookup_count               |     0 |
-    | server_pl_lookup_retries             |     0 |
-    | broken_server_connections            |     0 |
-    | server_requests                      |     0 |
-    | server_responses                     |     0 |
-    | server_error_responses               |     0 |
-    | server_resultset_responses           |     0 |
-    | server_ok_responses                  |     0 |
-    | server_other_responses               |     0 |
-    | send_saved_login_requests            |     0 |
-    | send_all_session_vars_requests       |     0 |
-    | send_use_database_requests           |     0 |
-    | send_changed_session_vars_requests   |     0 |
-    | send_last_insert_id_requests         |     0 |
-    | send_start_trans_requests            |     0 |
-    | vip_to_tenant_cache_hit              |     0 |
-    | vip_to_tenant_cache_miss             |     0 |
-    +--------------------------------------+-------+
-    87 rows in set
+       ```sql
+       SHOW PROXYSESSION;
+       ```
 
-    obclient [SYS]> SHOW PROXYSESSION STAT 3221583071 like "%time%";
-    +--------------------------------------+-------+
-    | stat_name                            | value |
-    +--------------------------------------+-------+
-    | total_transactions_time              |     0 |
-    | total_user_transactions_time         |     0 |
-    | total_client_request_read_time       |     0 |
-    | total_client_response_write_time     |     0 |
-    | total_client_request_analyze_time    |     0 |
-    | total_client_transaction_idle_time   |     0 |
-    | total_ok_packet_trim_time            |     0 |
-    | total_server_process_request_time    |     0 |
-    | total_server_response_read_time      |     0 |
-    | total_server_response_analyze_time   |     0 |
-    | total_send_saved_login_time          |     0 |
-    | total_send_all_session_vars_time     |     0 |
-    | total_send_use_database_time         |     0 |
-    | total_send_changed_session_vars_time |     0 |
-    | total_send_last_insert_id_time       |     0 |
-    | total_send_start_trans_time          |     0 |
-    | total_pl_lookup_time                 |     0 |
-    | total_congestion_control_time        |     0 |
-    | total_server_connect_time            |     0 |
-    +--------------------------------------+-------+
-    19 rows in set
-    ```
+       返回如下所示结果，返回结果中的 `Id` 即为 `cs_id`。
+
+       ```shell
+       +----------------------+-------+----------+-----------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
+       | proxy_sessid         | Id    | Cluster  | Tenant    | User | Host                 | db   | trans_count | svr_session_count | state             | tid   | pid   | using_ssl |
+       +----------------------+-------+----------+-----------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
+       | 12402504630519660558 | 65543 | test420  | oracle001 | sys  | 100.xx.xx.xx:59648   | SYS  |           0 |                 1 | MCS_ACTIVE_READER | 76286 | 76286 |         0 |
+       +----------------------+-------+----------+-----------+------+----------------------+------+-------------+-------------------+-------------------+-------+-------+-----------+
+       1 row in set
+       ```
+
+       执行以下语句获取 `connection_id`。
+
+       ```sql
+       SHOW FULL PROCESSLIST;
+       ```
+
+       返回如下所示结果，返回结果中的 `id` 即为 `connection_id`。
+
+       ```shell
+       +------------+------+-----------+---------------------+------+---------+------+--------+-----------------------+---------------+------+
+       | ID         | USER | TENANT    | HOST                | DB   | COMMAND | TIME | STATE  | INFO                  | IP            | PORT |
+       +------------+------+-----------+---------------------+------+---------+------+--------+-----------------------+---------------+------+
+       | 3221552558 | SYS  | oracle001 | 172.xx.xx.xx:45343  | SYS  | Query   |    0 | ACTIVE | SHOW FULL PROCESSLIST | 172.xx.xx.64  | 2881 |
+       +------------+------+-----------+---------------------+------+---------+------+--------+-----------------------+---------------+------+
+       1 row in set
+       ```
+
+    2. 查看内部统计项。
+
+       ```sql
+       SHOW PROXYSESSION STAT 65543 LIKE '%time%';
+       ```
+
+       或者
+
+       ```sql
+       SHOW PROXYSESSION STAT 3221552558 LIKE '%time%';
+       ```
+
+       返回结果如下所示：
+
+       ```shell
+       +-------------------------------------------+-------+
+       | stat_name                                 | value |
+       +-------------------------------------------+-------+
+       | total_transactions_time                   |     0 |
+       | total_user_transactions_time              |     0 |
+       | total_client_request_read_time            |     0 |
+       | total_client_response_write_time          |     0 |
+       | total_client_request_analyze_time         |     0 |
+       | total_client_transaction_idle_time        |     0 |
+       | total_ok_packet_trim_time                 |     0 |
+       | total_server_process_request_time         |     0 |
+       | total_server_response_read_time           |     0 |
+       | total_server_response_analyze_time        |     0 |
+       | total_send_saved_login_time               |     0 |
+       | total_send_all_session_vars_time          |     0 |
+       | total_send_use_database_time              |     0 |
+       | total_send_changed_session_vars_time      |     0 |
+       | total_send_changed_session_user_vars_time |     0 |
+       | total_send_last_insert_id_time            |     0 |
+       | total_send_start_trans_time               |     0 |
+       | total_pl_lookup_time                      |     0 |
+       | total_congestion_control_time             |     0 |
+       | total_server_connect_time                 |     0 |
+       +-------------------------------------------+-------+
+       20 rows in set
+       ```
 
     :::
 
