--- a/zh-CN/100.learn-more-about-oceanbase/700.constraints-on-product-specifications.md
+++ b/zh-CN/100.learn-more-about-oceanbase/700.constraints-on-product-specifications.md
@@ -54,7 +54,7 @@ tab Oracle 模式
 | 索引个数  | 128 个     |
 | 索引总列数 | 512 列     |
 | 索引长度  | 16K    |
-
+| 主键总列数 | 64 列      |
 | 主键长度  | 16K       |
 | 分区个数  | <ul><li>Oracle 模式：65536 个</li> <li>MySQL 模式：8192 个</li></ul>    |
 
@@ -73,6 +73,7 @@ tab MySQL 模式
   |---------------|------------------|
   | `CHAR`        | 256 字节         |
   | `VARCHAR`     | 262144 字节     |
+  | `BINARY`      | 256 字节         |
   | `VARBINARY`   | 1048576 字节     |
   | `TINYBLOB`    | 255 字节         |
   | `BLOB`        | 65536 字节       |
