--- a/zh-CN/700.reference/1200.database-proxy/500.logical-connection/500.kill-server-session.md
+++ b/zh-CN/700.reference/1200.database-proxy/500.logical-connection/500.kill-server-session.md
@@ -2,7 +2,7 @@
 
 本文介绍了 ODP 上终止指定 Client Session 和 Server Session 的方法。
 
-## 终止指定 Session
+## 终止指定的 Session
 
 您可以通过 `KILL PROXYSESSION` 语句可以终止指定的 Session。
 
@@ -26,9 +26,9 @@
 
      参数说明：
 
-     * `id` 既可以是 `cs_id`，也可以是 `CONNECTION_ID`，显示结果相同。
+     * `id` 既可以是 `cs_id`，也可以是 `connection_id` ，显示结果相同。
 
-       `cs_id` 为 ODP 内部标记的每个 Client 的 `id` 号，`connection_id` 为整个 OceanBase 数据库标记的每个 Client 的 `id` 号。`CONNECTION_ID` 通过 `SELECT CONNECTION_ID();` 语句获取。
+       `cs_id` 为 ODP 内部标记的每个 Client 的 `id` 号，`connection_id` 为整个 OceanBase 数据库标记的每个 Client 的 `id` 号。`connection_id`  通过 `SELECT CONNECTION_ID();` 语句获取。
 
      * 与 `KILL connection_id` 的作用一致。有关 `KILL` 语句的详细介绍，请参见 [KILL（MySQL 模式）](../../500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/600.sql-statement-of-mysql-mode/5800.kill-of-mysql-mode.md) 或 [KILL（Oracle 模式）](../../500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/900.sql-statement-of-oracle-mode/300.dcl-of-oracle-mode/1800.kill-of-oracle-mode.md)。
 
@@ -90,7 +90,7 @@
      1 row in set
      ```
 
-     通过示例可知，通过指定 `cs_id` 或 `CONNECTION_ID` 来 KILL 当前的 Session 时，命令执行成功后，当前的连接中断。使用 `SHOW PROXYSESSION` 查看时，OBClient 会重新建立 Session 连接，并执行 SQL 显示结果。
+     通过示例可知，通过指定 `cs_id` 或 `connection_id`  来 KILL 当前的 Session 时，命令执行成功后，当前的连接中断。使用 `SHOW PROXYSESSION` 查看时，OBClient 会重新建立 Session 连接，并执行 SQL 显示结果。
 
    * 终止指定 Client Session 上的 Server Session
 
@@ -102,7 +102,7 @@
 
      * `id` 既可以是 `cs_id`，也可以是 `connection_id`，显示结果相同。
 
-       `cs_id` 为 ODP 内部标记的每个 Client 的 `id` 号，`connection_id` 为整个 OceanBase 数据库标记的每个 Client 的 `id` 号。`CONNECTION_ID` 通过 `SELECT CONNECTION_ID();` 语句获取
+       `cs_id` 为 ODP 内部标记的每个 Client 的 `id` 号，`connection_id` 为整个 OceanBase 数据库标记的每个 Client 的 `id` 号。`connection_id`  通过 `SELECT CONNECTION_ID();` 语句获取
 
      * `ss_id` 表示 ODP 内部标记每个 Server 端会话（ Server Session）的 `id` 号，可以从 `SHOW PROXYSESSION ATTRIBUTE id` 中获取。详细的获取操作请参见 [展示 Session 详细状态](../500.logical-connection/200.displays-the-status-of-a-session.md)。
 
